tests/e2e/semantics/function_not_declared.error
Error: syntax error in story at line 1, column 1

1|    foo(a:2)
      ^^^^^

E0112: Function `foo` has not been declared
